[project]
name = "2025sky-ie-project"
version = "0.1.0"
description = "수요 예측 및 생산·물류 최적화 연구 과제"
readme = "README.md"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
requires-python = ">=3.9,<4.0"

[tool.poetry]
packages = [
  { include = "2025sky_ie_project", from = "src" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
flake8 = "^6.0"
jupyter = "^1.0"
ipykernel = "^6.29.4"
notebook  = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"